src/test/ui/associated-types/cache/project-fn-ret-invariant.ok.stderr
error: compilation successful
  --> $DIR/project-fn-ret-invariant.rs:59:1
   |
LL | fn main() { }
   | ^^^^^^^^^^^^^

error: aborting due to previous error

